@@ -1,3 +1,8 @@
+2005-05-23  Ross Burton  <ross@burtonini.com>
+
+	* src/flurb.c:
+	Initialise the Exec action.
+
 2005-05-04  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
